// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewControlBar does not render ShowMoreButton when userRows is MAX_ROW_COUNT 1`] = `
<ControlBar
  editMode={false}
  height={424}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    style={
      Object {
        "height": 410,
        "overflowY": "auto",
        "padding": "10px 6px 0 6px",
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
            "position": "relative",
            "textDecoration": "none",
            "top": "2px",
          }
        }
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <WithStyles(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
  </div>
  <ShowMoreButton
    disabled={true}
    isMaxHeight={true}
    onClick={[Function]}
  />
</ControlBar>
`;

exports[`ViewControlBar renders ShowMoreButton when userRows is less than MAX_ROW_COUNT 1`] = `
<ControlBar
  editMode={false}
  height={384}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    style={
      Object {
        "height": 370,
        "overflowY": "hidden",
        "padding": "10px 6px 0 6px",
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
            "position": "relative",
            "textDecoration": "none",
            "top": "2px",
          }
        }
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <WithStyles(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
  </div>
  <ShowMoreButton
    disabled={false}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;

exports[`ViewControlBar renders a ViewControlBar with no items 1`] = `
<ControlBar
  editMode={false}
  height={64}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    style={
      Object {
        "height": 50,
        "overflowY": "hidden",
        "padding": "10px 6px 0 6px",
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
            "position": "relative",
            "textDecoration": "none",
            "top": "2px",
          }
        }
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <WithStyles(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
  </div>
  <ShowMoreButton
    disabled={false}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;

exports[`ViewControlBar when dashboards are provided renders DashboardItemChips for each item on dashboard 1`] = `
<ControlBar
  editMode={false}
  height={64}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    style={
      Object {
        "height": 50,
        "overflowY": "hidden",
        "padding": "10px 6px 0 6px",
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
            "position": "relative",
            "textDecoration": "none",
            "top": "2px",
          }
        }
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <WithStyles(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
    <DashboardItemChip
      dashboardId="rainbow123"
      key="rainbow123"
      label="Rainbow Dash"
      selected={false}
      starred={false}
    />
    <DashboardItemChip
      dashboardId="fluttershy123"
      key="fluttershy123"
      label="Fluttershy"
      selected={false}
      starred={true}
    />
  </div>
  <ShowMoreButton
    disabled={false}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;
